# pint_pal

./: .gitattributes  .gitignore  LICENSE  README.md  mapping.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: commenting_artifacts.yml  python-package.yml  test_notebook.yml
configs/: J0605+3757.nb.yaml  J0605+3757.wb.yaml
nb_templates/: example_notebook.ipynb  excision_report.ipynb  make_release_plots.ipynb  nbwb_explore.ipynb  process_ipta_noiseflexible_v0.1.ipynb  process_ipta_postnoise_v0.ipynb  process_ipta_prenoise_v0.ipynb  process_v1.1.ipynb  process_v1.2.ipynb  toa_excision.ipynb  toa_excision_discovery.ipynb
src/pint_pal/: PINT_parameters.py  __init__.py  _version.py  check_in.py  checkin.py  config.py  data_checker.py  defaults.py  defaults.yaml  discovery_priors.json  discovery_utils.py  dmx_utils.py  ftester.py  gibbs_sampler.py  lite_utils.py  logger.py  make_release.py  markdownreport.py  noise_utils.py  notebook_runner.py  notebook_templater.py  notebook_writer.py  outlier_utils.py  packageconfiguration.py  par_checker.py  plot_settings.yaml  plot_utils.py  reflagger.py  report.py  set_threads.py  solar.py  summarizer.py  threads.py  timingconfiguration.py  timingnotebook.py  update_results.py  utils.py  write_initial_configs.py  yamlio.py
src/pint_pal/BBX/: __init__.py  bbx.py  diagnostics.py  utils.py
src/timing_analysis/: PINT_parameters.py  defaults.py  dmx_utils.py  ftester.py  io.py  lite_utils.py  make_release.py  noise_utils.py  notebook_runner.py  notebook_templater.py  notebook_writer.py  outlier_analysis.py  outlier_utils.py  par_checker.py  plot_utils.py  reflagger.py  report.py  timfiles.txt  timingconfiguration.py  timingnotebook.py  update_results.py  utils.py  write_initial_configs.py  yamlio.py
src/timing_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/timing_analysis/paper_scripts/tables/: README.txt  get_residuals.py  good_TOAs.txt  make_model_table.py  make_par_table.py  noise_results_20220314.pickle  read_noise_chains.py  utils.py  weighted_rmss_20220314.pickle
src/timing_analysis/utils/: ftester.py  lite_utils.py  notebook_writer.py  timingconfiguration.py
tests/: test_data_checker.py  test_discovery_utils.py  test_dmx_utils.py  test_git_branch.py  test_lite_utils.py  test_logger.py  test_markdownreport.py  test_noise_setup_integration.py  test_noise_utils.py  test_outlier_utils.py  test_packageconfiguration.py  test_par_checker.py  test_psr_file_integrity.py  test_report.py  test_run_notebook.py  test_run_notebook_quick.py  test_set_threads.py  test_summarizer.py  test_threads.py  test_timingconfiguration.py
tests/config/: badconfig.yaml  goodconfig.yaml
tests/configs/: J0605+3757.nb.yaml  J0605+3757.wb.yaml  badconfig.yaml  luconfig.yaml  pint_pal_project.yaml  tcconfig.yaml  tctest.nb.yaml
tests/par/: J0030+0451.par  J0605+3757_PINT_20221021.wb.par  J2022+2534.basic.par  J2022+2534.compare.par  J2022+2534_PINT.par  J2022+2534_test.par  bad_values.par
tests/results/: lite_utils_compare_model.txt  lite_utils_large_residuals.txt
tests/results/archive/: J0605+3757_PINT_20220223.nb.par
tests/tim/: B1855+09.tim  B1855+09_NANOGrav_12yv4.tim  J0605+3757.Rcvr1_2.GUPPI.15y.x.nb.tim  J0605+3757.Rcvr1_2.GUPPI.15y.x.wb.tim  J0605+3757.Rcvr_800.GUPPI.15y.x.nb.tim  J0605+3757.Rcvr_800.GUPPI.15y.x.wb.tim  J0605+3757.nb_excise.tim  J0605+3757.wb_excise.tim  J2022+2534_15y_L-S_nb.tim  J2022+2534_PINT.tim  J2022+2534_test.tim
